--- a/tatiDesigns/work.html
+++ b/tatiDesigns/work.html
@@ -50,7 +50,10 @@ PORTFOLIO FOR NEWM-N299/ CAREER PLANNING
     <br />
     <br />
     <br />
-    <div class="row" style="padding-left: 500px; padding-top: 50px">
+    <div
+      class="row"
+      style="padding-top: 50px; align-items: center; padding-left: 400px"
+    >
       <div class="column">
         <a href="images/graphicsDesign/frontHD.png" target="_blank"
           ><img src="images/graphicsDesign/frontHD.png" alt=""
